@@ -1,5 +1,7 @@
 2006-09-04  Miguel de Icaza  <miguel@novell.com>
 
+	* src/gmarkup.c: The leak fixing commit.
+	
 	* src/gmarkup.c (g_markup_parse_context_end_parse): Add missing
 	method. 
 	(g_markup_parse_context_free): Implement. 
